# vertex-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: github.yml
src/: config.py
src/components/: load.py  predict.py  preprocess_predict.py  preprocess_train.py  save_model.py  save_results.py  train.py
src/deployment/: launcher.py  scheduler.py
src/pipelines/: prediction.py  training.py
src/sql/: test.sql
src/utils/: step.py
terraform/: bigquery.tf  main.tf
